added api to capture image search

--- a/app.json
+++ b/app.json
@@ -16,6 +16,10 @@
       }
     },
     "android": {
+      "statusBar": {
+        "backgroundColor": "#ffffff",
+        "barStyle": "dark-content"
+      },
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
